minikube_kong_echo/ingress_host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo1
spec:
  rules:
  - host: api.foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
