minikube_kong_echo/ingress_host_path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo2
spec:
  rules:
  - host: api.bar
    http:
      paths:
      - path: /bar
        backend:
          serviceName: echo
          servicePort: 80
